--- a/helm-common.yaml
+++ b/helm-common.yaml
@@ -1,9 +1,9 @@
-nameOverride: microservices-template
+nameOverride: photoroster
 
 namespace: ua-vpit--enterprise-systems--lms
 
 image:
-  repository: registry.docker.iu.edu/lms/microservices-template
+  repository: registry.docker.iu.edu/lms/photoroster
   tag: unstable
   pullPolicy: Always
 
