--- a/helm-dev.yaml
+++ b/helm-dev.yaml
@@ -2,7 +2,7 @@ namespace: default
 bootstrapSecret: "properties-2020-11-30"
 
 image:
-  repository: localhost:5000/microservices-template
+  repository: localhost:5000/photoroster
   pullPolicy: Never
   tag: unstable
 
