--- a/helm-prd.yaml
+++ b/helm-prd.yaml
@@ -14,5 +14,5 @@ env:
 ingress:
   enabled: true
   hosts:
-    - host: "microservices-template.apps.iu.edu"
+    - host: "photoroster.apps.iu.edu"
       paths: []
