--- a/helm-reg.yaml
+++ b/helm-reg.yaml
@@ -12,5 +12,5 @@ env:
 ingress:
   enabled: true
   hosts:
-    - host: "microservices-template-reg.apps-test.iu.edu"
+    - host: "photoroster-reg.apps-test.iu.edu"
       paths: []
