--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: microservices-template
+    name: photoroster
   profiles:
     active: redis
   session:
@@ -13,7 +13,7 @@ spring:
       resourceserver:
         jwt:
           jwk-set-uri: ${oauth.tokenprovider.url}/.well-known/jwks.json
-microservices-template:
+photoroster:
   version: @app.version@
   env: ${app.env}
 
@@ -31,4 +31,4 @@ spring:
   profiles: redis
   session:
     store-type: redis
-    redis.namespace: microservices-template-${app.version}:session
+    redis.namespace: photoroster-${app.version}:session
