LMSA-7226 - set the parent to just released 4.0.10 and deps to non SNAPSHOT and fixed a test

--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,28 @@
     <parent>
         <artifactId>lms2Wow</artifactId>
         <groupId>edu.iu.uits.lms</groupId>
-        <version>4.0.9</version>
+        <version>4.0.10</version>
         <relativePath />
     </parent>
 
     <properties>
         <app.version>${project.version}</app.version>
+        <common-configuration.version>4.0.12</common-configuration.version>
+        <commons-collections4.version>4.4</commons-collections4.version>
+        <commons-io.version>2.8.0</commons-io.version>
+        <commons-lang3.version>3.11</commons-lang3.version>
         <docker_repository_name>photoroster</docker_repository_name>
         <docker_tag>stable</docker_tag>
         <helm_service_name>photoroster</helm_service_name>
+        <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
+        <jquery.version>3.5.1</jquery.version>
+        <lms-canvas-client.version>4.0.20</lms-canvas-client.version>
+        <lms-iuonly-client.version>4.0.4</lms-iuonly-client.version>
+        <lms-rivet.version>4.1.7.2_2</lms-rivet.version>
+        <lms-lti-web.version>4.0.18</lms-lti-web.version>
+        <nimbus-jose-jwt.version>9.4.2</nimbus-jose-jwt.version>
+        <redis-config.version>4.0.4</redis-config.version>
+        <spring-security-oauth2-autoconfigure.version>2.3.8.RELEASE</spring-security-oauth2-autoconfigure.version>
     </properties>
 
     <dependencies>
@@ -54,27 +67,27 @@
         <dependency>
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
-            <version>2.3.1.RELEASE</version>
+            <version>${spring-security-oauth2-autoconfigure.version}</version>
         </dependency>
         <dependency>
             <groupId>edu.iu.uits.lms</groupId>
             <artifactId>lms-lti-web</artifactId>
-            <version>4.0.17</version>
+            <version>${lms-lti-web.version}</version>
         </dependency>
         <dependency>
             <groupId>edu.iu.uits.lms</groupId>
             <artifactId>lms-canvas-client</artifactId>
-            <version>4.0.20-SNAPSHOT</version>
+            <version>${lms-canvas-client.version}</version>
         </dependency>
         <dependency>
             <groupId>edu.iu.uits.lms</groupId>
             <artifactId>lms-iuonly-client</artifactId>
-            <version>4.0.4-SNAPSHOT</version>
+            <version>${lms-iuonly-client.version}</version>
         </dependency>
         <dependency>
             <groupId>edu.iu.uits.lms</groupId>
             <artifactId>common-configuration</artifactId>
-            <version>4.0.11</version>
+            <version>${common-configuration.version}</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
@@ -83,12 +96,12 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
-            <version>3.4.1</version>
+            <version>${jquery.version}</version>
         </dependency>
         <dependency>
             <groupId>edu.iu.uits.lms</groupId>
             <artifactId>lms-rivet</artifactId>
-            <version>4.1.7.2_1</version>
+            <version>${lms-rivet.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -97,22 +110,22 @@
         <dependency>
             <groupId>edu.iu.uits.lms</groupId>
             <artifactId>redis-config</artifactId>
-            <version>4.0.3</version>
+            <version>${redis-config.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nimbusds</groupId>
             <artifactId>nimbus-jose-jwt</artifactId>
-            <version>8.19</version>
+            <version>${nimbus-jose-jwt.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>4.4</version>
+            <version>${commons-collections4.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.7</version>
+            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.cache</groupId>
@@ -125,7 +138,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.11</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -134,7 +147,7 @@
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.1.1</version>
+            <version>${javax.ws.rs-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
