--- a/package.json
+++ b/package.json
@@ -3,47 +3,50 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open",
     "test": "jest"
   },
   "devDependencies": {
-    "autoprefixer": "9.3.1",
-    "babel-core": "6.26.3",
-    "babel-jest": "23.6.0",
-    "babel-loader": "7.1.2",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "css-loader": "1.0.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "file-loader": "2.0.0",
-    "jest": "23.6.0",
-    "style-loader": "0.23.1",
-    "less": "3.8.1",
-    "less-loader": "4.1.0",
+    "@babel/core": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "7.12.13",
+    "@babel/runtime": "7.12.13",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "autoprefixer": "10.2.4",
+    "babel-jest": "26.6.3",
+    "babel-loader": "8.2.2",
+    "buffer": "6.0.3",
+    "css-loader": "5.0.2",
+    "enzyme": "^3.11.0",
+    "file-loader": "6.2.0",
+    "jest": "26.6.3",
     "path": "0.12.7",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.2.0",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4"
+    "style-loader": "2.0.0",
+    "webpack": "5.21.2",
+    "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
+    "axios": "^0.21.1",
     "classnames": "2.2.6",
-    "dateformat": "^3.0.3",
-    "lodash": "^4.17.11",
-    "react": "16.6.0",
-    "react-csv": "^1.0.19",
-    "react-dom": "16.6.0",
+    "core-js": "^3.8.3",
+    "dateformat": "^4.5.1",
+    "lodash": "^4.17.20",
+    "react": "17.0.1",
+    "react-csv": "^2.0.3",
+    "react-dom": "17.0.1",
     "react-lines-ellipsis": "^0.14.0",
     "react-native-uuid": "^1.4.9",
     "react-scroll-up-button": "1.6.4",
+    "regenerator-runtime": "0.13.7",
     "rest": "^2.0.0",
     "rivet-clearable-input": "maurercw/rivet-clearable-input#v0.2.0",
-    "rivet-react": "^1.4.0",
-    "rxjs": "6.3.3",
-    "styled-components": "^4.0.2"
+    "rivet-react": "^1.5.0",
+    "rxjs": "6.6.3",
+    "styled-components": "^5.2.1"
+  },
+  "comments": {
+    "devDependencies": {
+      "@wojtekmaj/enzyme-adapter-react-17": "This is just a temporary dependency until they release an official one.  See https://github.com/enzymejs/enzyme/issues/2429 for details",
+      "buffer": "react-native-uuid needed this, but hopefully in a future release they'll fix that"
+    }
   }
 }
