--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <artifactId>lms2Wow</artifactId>
         <groupId>edu.iu.uits.lms</groupId>
-        <version>4.0.10</version>
+        <version>4.0.11-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -26,7 +26,7 @@
         <jquery.version>3.5.1</jquery.version>
         <lms-canvas-client.version>4.0.20</lms-canvas-client.version>
         <lms-iuonly-client.version>4.0.4</lms-iuonly-client.version>
-        <lms-rivet.version>4.1.7.2_2</lms-rivet.version>
+        <lms-rivet.version>4.1.7.3-SNAPSHOT</lms-rivet.version>
         <lms-lti-web.version>4.0.18</lms-lti-web.version>
         <nimbus-jose-jwt.version>9.4.2</nimbus-jose-jwt.version>
         <redis-config.version>4.0.4</redis-config.version>
