--- a/helm-dev.yaml
+++ b/helm-dev.yaml
@@ -1,5 +1,5 @@
 namespace: default
-bootstrapSecret: "properties-2021-05-10"
+bootstrapSecret: "properties-2021-06-07"
 
 image:
   repository: localhost:5000/photoroster
@@ -20,6 +20,9 @@ service:
       protocol: TCP
       name: remote-debug
 
-activeProfiles: "none"
+activeProfiles: "dev"
 
 developmentMode: true
+
+vault:
+  enabled: false
