--- a/helm-stg.yaml
+++ b/helm-stg.yaml
@@ -1,7 +1,7 @@
 
 projectedSecret:
   - secret:
-      name: "properties-2021-05-10"
+      name: "properties-2021-06-07"
 
 image:
   tag: unstable-stg
@@ -14,3 +14,9 @@ ingress:
   hosts:
     - host: "photoroster-stg.apps-test.iu.edu"
       paths: []
+
+activeProfiles: "redis,stg"
+
+serviceAccountName: photoroster-stg
+
+cluster: es-test
