--- a/helm-prd.yaml
+++ b/helm-prd.yaml
@@ -17,7 +17,7 @@ ingress:
     - host: "photoroster.apps.iu.edu"
       paths: []
 
-activeProfiles: "redis,prd"
+activeProfiles: "redis,prd,redis-cache"
 
 serviceAccountName: photoroster-prd
 
