--- a/helm-reg.yaml
+++ b/helm-reg.yaml
@@ -15,7 +15,7 @@ ingress:
     - host: "photoroster-reg.apps-test.iu.edu"
       paths: []
 
-activeProfiles: "redis,reg"
+activeProfiles: "redis,reg,redis-cache"
 
 serviceAccountName: photoroster-reg
 
