--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <helm_service_name>photoroster</helm_service_name>
         <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
         <jquery.version>3.5.1</jquery.version>
-        <lms-bom.version>4.0.23</lms-bom.version>
+        <lms-bom.version>4.0.27-SNAPSHOT</lms-bom.version>
     </properties>
 
     <dependencyManagement>
@@ -71,6 +71,14 @@
         <dependency>
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>edu.iu.uits.lms</groupId>
