--- a/helm-snd.yaml
+++ b/helm-snd.yaml
@@ -15,7 +15,7 @@ ingress:
     - host: "photoroster-snd.apps-snd.iu.edu"
       paths: []
 
-activeProfiles: "redis,snd,redis-cache"
+activeProfiles: "redis-session,snd,redis-cache"
 
 serviceAccountName: photoroster-snd
 
