--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: photoroster
   profiles:
-    active: redis
+    active: redis-session
   session:
     store-type: none
 #  output:
@@ -29,7 +29,7 @@ server:
 ---
 
 spring:
-  profiles: redis
+  profiles: redis-session
   session:
     store-type: redis
     redis.namespace: photoroster-${app.version}:session
