--- a/helm-stg.yaml
+++ b/helm-stg.yaml
@@ -15,7 +15,7 @@ ingress:
     - host: "photoroster-stg.apps-test.iu.edu"
       paths: []
 
-activeProfiles: "redis,stg,redis-cache"
+activeProfiles: "redis-session,stg,redis-cache"
 
 serviceAccountName: photoroster-stg
 
