--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>photoroster</artifactId>
     <packaging>jar</packaging>
     <name>photoroster</name>
-    <version>4.0.4-SNAPSHOT</version>
+    <version>4.0.4</version>
 
     <parent>
         <artifactId>lms2Wow</artifactId>
