--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,8 @@
         <jquery.version>3.5.1</jquery.version>
         <lms-canvas-services.version>5.0.10-SNAPSHOT</lms-canvas-services.version>
         <lms-canvas-common-configuration.version>5.0.7</lms-canvas-common-configuration.version>
-        <lms-canvas-iu-custom-services.version>5.0.10</lms-canvas-iu-custom-services.version>
-        <lms-canvas-lti-framework.version>5.1.12-SNAPSHOT</lms-canvas-lti-framework.version>
+        <lms-canvas-iu-custom-services.version>5.0.11-SNAPSHOT</lms-canvas-iu-custom-services.version>
+        <lms-canvas-lti-framework.version>5.1.12</lms-canvas-lti-framework.version>
         <lms-canvas-rivet.version>5.1.8.2_1</lms-canvas-rivet.version>
         <lms-canvas-redis-config.version>5.0.7</lms-canvas-redis-config.version>
         <nimbus-jose-jwt.version>9.10.1</nimbus-jose-jwt.version>
@@ -85,6 +85,7 @@
         <npm.version>6.14.11</npm.version>
         <spring-cloud-starter-vault-config.version>3.0.5</spring-cloud-starter-vault-config.version>
         <spring-security-bom.version>5.5.2</spring-security-bom.version>
+        <springdoc-openapi-ui.version>1.6.9</springdoc-openapi-ui.version>
         <webjars-locator.version>0.42</webjars-locator.version>
 
         <plugins.compiler.version>3.8.1</plugins.compiler.version>
@@ -114,6 +115,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>edu.iu.uits.lms</groupId>
             <artifactId>lms-canvas-common-configuration</artifactId>
@@ -168,6 +174,11 @@
         <dependency>
             <groupId>nz.net.ultraq.thymeleaf</groupId>
             <artifactId>thymeleaf-layout-dialect</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc-openapi-ui.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
