--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -97,9 +97,18 @@ spring:
 spring:
   config:
     activate.on-profile: swagger
-    import: classpath:lti-api-config.properties
 springdoc:
+  api-docs:
+    enabled: true
+    path: /api/v3/api-docs
+  cache.disabled: true
+  packagesToScan: edu.iu.uits.lms.photoroster.controller.rest
   swagger-ui:
+    enabled: false
+    disable-swagger-default-url: true
+    path: /api/swagger-ui.html
+    # Setting supportedSubmitMethods to an empty list is what turns off the "try it out" button
+    #    supportedSubmitMethods:
     oauth:
       clientId: ${oauth.tokenprovider.clientId}
   oAuthFlow:
