--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,9 @@
         <jquery.version>3.5.1</jquery.version>
         <lms-canvas-services.version>5.0.10-SNAPSHOT</lms-canvas-services.version>
         <lms-canvas-common-configuration.version>5.0.7</lms-canvas-common-configuration.version>
-        <lms-canvas-iu-custom-services.version>5.0.11-SNAPSHOT</lms-canvas-iu-custom-services.version>
-        <lms-canvas-lti-framework.version>5.1.12</lms-canvas-lti-framework.version>
-        <lms-canvas-rivet.version>5.1.8.2_1</lms-canvas-rivet.version>
+        <lms-canvas-iu-custom-services.version>5.0.11</lms-canvas-iu-custom-services.version>
+        <lms-canvas-lti-framework.version>5.1.13</lms-canvas-lti-framework.version>
+        <lms-canvas-rivet.version>5.2.1.0</lms-canvas-rivet.version>
         <lms-canvas-redis-config.version>5.0.7</lms-canvas-redis-config.version>
         <nimbus-jose-jwt.version>9.10.1</nimbus-jose-jwt.version>
         <nodejs.version>v14.15.5</nodejs.version>
