--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,7 @@ spring:
             client-id: ${crimsoncard.clientId}
             client-secret: ${crimsoncard.secret}
             authorization-grant-type: client_credentials
+            client-authentication-method: post
         provider:
           cc:
             token-uri: ${crimsoncard.authUrl}
