--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Maven Build
         env:
           NPM_CONFIG_GLOBALCONFIG: /tmp/.npmrc
-        run: mvn clean install -P '${{ vars.BUILD_PROFILES}}'
+        run: mvn clean install -B -P '${{ vars.BUILD_PROFILES}}'
         working-directory: tools/${{ vars.DEPLOY_DIR }}
       - name: copy jar file
         run: |
@@ -90,7 +90,7 @@ jobs:
           cp tools/${{ vars.DEPLOY_DIR }}/target/${{ vars.JAR_FILE }} deployments/${{ vars.DEPLOY_DIR }}/lib/${{ vars.JAR_FILE }}
       - name: build/push docker image
         run: |
-          mvn clean install -P docker-push -D dockerfile.username=${{ secrets.LMS_REGISTRY_USERNAME }} \
+          mvn clean install -B -P docker-push -D dockerfile.username=${{ secrets.LMS_REGISTRY_USERNAME }} \
             -D dockerfile.password=${{ secrets.LMS_REGISTRY_PASSWORD }} -D docker_repository_base=registry.docker.iu.edu/lms/ \
             -D docker_tag=${{ vars.DOCKER_TAG }}
         working-directory: deployments/${{ vars.DEPLOY_DIR }}
