--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.9</version>
+        <version>3.5.5</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
-    <version>6.0.4-SNAPSHOT</version>
+    <version>6.1.0-SNAPSHOT</version>
     <description>The IU Photo Roster is a tool in Canvas that you can access via the Canvas People tool. The roster displays the name, email address, role, and photo for each member of the course.</description>
     <url>https://github.com/indiana-university/lms-canvas-photoroster/</url>
     <inceptionYear>2015</inceptionYear>
@@ -54,26 +54,27 @@
 
     <properties>
         <app.version>${project.version}</app.version>
-        <denodo-hibernate-dialect.version>8.0.20201021</denodo-hibernate-dialect.version>
-        <denodo-jdbc.version>8.0.2</denodo-jdbc.version>
-        <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
-        <git-commit-id-maven-plugin.version>9.0.1</git-commit-id-maven-plugin.version>
+        <denodo-hibernate-dialect.version>9.0.20240513</denodo-hibernate-dialect.version>
+        <denodo-jdbc.version>9.1.0</denodo-jdbc.version>
+        <frontend-maven-plugin.version>1.15.4</frontend-maven-plugin.version>
+        <git-commit-id-maven-plugin.version>9.0.2</git-commit-id-maven-plugin.version>
         <hibernate6-ddl-maven-plugin.version>1.0.2</hibernate6-ddl-maven-plugin.version>
         <java.version>21</java.version>
         <jdk.source>21</jdk.source>
         <jdk.target>21</jdk.target>
         <jquery.version>3.7.1</jquery.version>
-        <lms-embedded-services.version>6.0.2</lms-embedded-services.version>
-        <lms-team-spring-boot-it12>6.5.0</lms-team-spring-boot-it12>
-        <lms-canvas-rivet.version>6.2.8.1_1</lms-canvas-rivet.version>
+        <lms-embedded-services.version>6.2.12</lms-embedded-services.version>
+        <lms-team-spring-boot-it12>6.5.2</lms-team-spring-boot-it12>
+        <lms-canvas-rivet.version>6.2.9.0_1</lms-canvas-rivet.version>
+        <logcaptor.version>2.12.1</logcaptor.version>
         <nodejs.version>v20.15.0</nodejs.version>
         <npm.version>10.7.0</npm.version>
-        <springdoc-openapi-ui.version>2.6.0</springdoc-openapi-ui.version>
-        <spring-cloud.version>2023.0.3</spring-cloud.version>
+        <springdoc-openapi-ui.version>2.8.13</springdoc-openapi-ui.version>
+        <spring-cloud.version>2025.0.0</spring-cloud.version>
         <webjars-locator.version>0.52</webjars-locator.version>
 
-        <plugins.compiler.version>3.13.0</plugins.compiler.version>
-        <plugins.license.version>2.4.0</plugins.license.version>
+        <plugins.compiler.version>3.14.0</plugins.compiler.version>
+        <plugins.license.version>2.7.0</plugins.license.version>
         <plugins.release.version>3.1.1</plugins.release.version>
     </properties>
 
@@ -196,6 +197,13 @@
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity6</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.hakky54</groupId>
+            <artifactId>logcaptor</artifactId>
+            <version>${logcaptor.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <!-- Tool specific dependencies -->
         <dependency>
@@ -421,11 +429,6 @@
                     <artifactId>lms-team-spring-boot-it12</artifactId>
                     <version>${lms-team-spring-boot-it12}</version>
                 </dependency>
-                <!--                <dependency>-->
-                <!--                    <groupId>edu.iu.es.esi.audit</groupId>-->
-                <!--                    <artifactId>spring-boot-it12</artifactId>-->
-                <!--                    <version>${spring-boot-it12}</version>-->
-                <!--                </dependency>-->
             </dependencies>
             <repositories>
                 <repository>
